--- a/config.json
+++ b/config.json
@@ -73,6 +73,18 @@
       "api": "https://wwzy.tv/api.php/provide/vod",
       "name": "旺旺短剧"
     },
+    "火花": {
+      "api": "https://cj.huohua.live/api.php/provide/vod",
+      "name": "火花官采"
+    },
+    "速播": {
+      "api": "https://subocj.com/api.php/provide/vod",
+      "name": "速播资源"
+    },
+    "豪华": {
+      "api": "https://hhzyapi.com/api.php/provide/vod",
+      "name": "豪华资源"
+    },
     "ikun": {
       "api": "https://ikunzyapi.com/api.php/provide/vod",
       "name": "iKun资源"
