--- a/config.json
+++ b/config.json
@@ -85,6 +85,46 @@
       "api": "https://hhzyapi.com/api.php/provide/vod",
       "name": "豪华资源"
     },
+    "量子": {
+      "api": "https://cj.lziapi.com/api.php/provide/vod",
+      "name": "量子资源"
+    },
+    "新浪": {
+      "api": "https://api.xinlangapi.com/xinlangapi.php/provide/vod",
+      "name": "新浪资源"
+    },
+    "虎牙": {
+      "api": "https://www.huyaapi.com/api.php/provide/vod",
+      "name": "虎牙资源"
+    },
+    "红牛": {
+      "api": "https://www.hongniuzy2.com/api.php/provide/vod",
+      "name": "红牛资源"
+    },
+    "索尼": {
+      "api": "https://suoniapi.com/api.php/provide/vod",
+      "name": "索尼资源"
+    },
+    "金鹰": {
+      "api": "https://jyzyapi.com/provide/vod",
+      "name": "金鹰资源"
+    },
+    "淘片": {
+      "api": "https://taopianapi.com/cjapi/mc/vod",
+      "name": "淘片资源"
+    },
+    "超级淘片": {
+      "api": "https://taopianapi.com/cjapi/sda/vod",
+      "name": "超级淘片资源"
+    },
+    "麒麟": {
+      "api": "http://www.qilinzyz.com/api.php/provide/vod",
+      "name": "麒麟资源"
+    },
+    "峰巢": {
+      "api": "https://api.fczy888.me/api.php/provide/vod",
+      "name": "蜂巢资源"
+    },
     "ikun": {
       "api": "https://ikunzyapi.com/api.php/provide/vod",
       "name": "iKun资源"
